# Flow-Desktop

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Design.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
changelog/: v0.1.0.txt
scripts/: report-bundle-sizes.mjs  verify-release-version.mjs  write-nightly-config.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  rustypipe_cache.json  tauri.conf.json  tauri.prerelease.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_create_watch_history.sql  0002_create_settings.sql  0003_create_recommendation_events.sql  0004_create_video_cache.sql  0005_music_and_dearrow.sql  0006_watch_history_is_music.sql  0007_create_downloads.sql  0008_create_download_collections.sql  0009_create_sync_core.sql  0010_watch_history_sync_cols.sql  0011_perf_indexes.sql  0012_create_notifications.sql
src-tauri/sidecar/: integrity.cjs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: dearrow.rs  extractor.rs  http.rs  innertube_client.rs  mod.rs
src-tauri/src/api/innertube/: download.rs  mod.rs  parsers.rs
src-tauri/src/api/innertube/core/: botguard.rs  context.rs  http.rs  mod.rs  utils.rs  webview_player.rs  webview_pot.rs
src-tauri/src/api/innertube/extractors/: channel.rs  comments.rs  live_chat.rs  mod.rs  music.rs  player.rs  playlist.rs  search.rs  shorts.rs  subscription.rs  trending.rs
src-tauri/src/api/innertube/music/: album.rs  artist.rs  browse.rs  client.rs  clients.rs  endpoints.rs  mod.rs  playback.rs  playlist.rs  search.rs  watch.rs
src-tauri/src/api/innertube/music/parse/: continuation.rs  endpoint.rs  items.rs  mod.rs  runs.rs  shelves.rs  thumbnail.rs
src-tauri/src/bridge/: mod.rs
src-tauri/src/commands/: db.rs  diagnostics.rs  downloads.rs  files.rs  mod.rs  music.rs  music_brain.rs  notifications.rs  recommendation.rs  shorts.rs  sync.rs  window.rs  youtube.rs
src-tauri/src/commands/downloads/: sidecars.rs
src-tauri/src/commands/downloads/muxer/: faststart.rs  mod.rs  mp4_demux.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: cache.rs  download_collections.rs  downloads.rs  mod.rs  notifications.rs  recommendations.rs  settings.rs  watch_history.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/flow_neuro/: brain_store.rs  eval.rs  mod.rs  ranker.rs  scoring.rs  signals.rs  tokenizer.rs
src-tauri/src/models/: channel.rs  comment.rs  live_chat.rs  mod.rs  music.rs  music_pages.rs  music_stream.rs  playlist.rs  search.rs  shorts.rs  video.rs
src-tauri/src/music_brain/: backfill.rs  eval.rs  learn.rs  mixes.rs  mod.rs  model.rs  profile.rs  rank.rs  store.rs
src-tauri/src/security/: validation.rs
src-tauri/src/services/: mod.rs  music_service.rs  notification_service.rs  recommendation_service.rs  shorts_service.rs  win_notify.rs  youtube_service.rs
src-tauri/src/streaming/: mod.rs  proxy.rs
src-tauri/src/streaming/sabr/: ATTRIBUTION.md  engine.rs  errors.rs  manifest.rs  messages.rs  mod.rs  pb.rs  selector.rs  session.rs  ump.rs
src-tauri/src/sync/: apply.rs  brainmap.rs  canonical.rs  codec.rs  crypto.rs  error.rs  export.rs  frames.rs  identity.rs  ledger.rs  mapping.rs  merge.rs  mod.rs  protocol.rs  qr.rs  session.rs  transport.rs
src-tauri/tests/: sync_albums.rs  sync_apply.rs  sync_codec.rs  sync_crdt.rs  sync_export.rs  sync_fuzz.rs  sync_golden.rs  sync_ledger.rs  sync_likes_mapping.rs  sync_merge.rs  sync_phase1.rs  sync_phase2.rs  sync_scale.rs  sync_schema.rs
src-tauri/tests/fixtures/flow-sync/: canonical_json.json  hkdf.json  sas.json  seal_open.json
src-tauri/tests/fixtures/sync/: capabilities.json  flow_neuro_brain.json  likes.json  music_brain.json  playlists.json  settings.json  subscriptions.json  watch_history.json
src/components/: ErrorBoundary.tsx
src/components/channel/: ChannelCard.tsx  ChannelGrids.tsx  ChannelHero.tsx  ChannelTabs.tsx
src/components/common/: Logo.tsx  TrackCard.tsx  VideoCard.tsx
src/components/deep-flow/: DeepFlowController.tsx
src/components/donations/: DonationPrompt.tsx
src/components/downloads/: DownloadActivity.tsx  (+4 more)
src/lib/: appMetadata.ts  codecPreference.ts  concurrency.ts  continueWatching.ts  deepFlow.ts  diagnostics.ts  dialogs.ts  donationPrompt.ts  downloadActions.ts  flowNeuroImport.ts  i18n.ts  linkify.tsx  musicFormat.ts  musicHistory.ts  musicQuickPicks.test.ts  musicQuickPicks.ts  openExternal.ts  platform.ts  playerDiagnostics.ts  playerError.test.ts  playerError.ts  playlistLibrary.ts  playlistSort.ts  regionOptions.ts  savedShortsLibrary.ts  shortsQueue.ts  systemMetadata.ts  themes.test.ts  themes.ts  thumbnails.ts  useArtistPage.ts  useChannelAvatar.ts  useCollectionDownloads.ts  useCombinedSearch.ts  useDebounce.ts  useDeepLinkHandoff.ts  useDiagnostics.ts  useDominantColor.ts  useDownloadDialog.ts  useDownloads.ts  (+33 more)
src/pages/: AlbumsLibrary.tsx  Channel.tsx  Diagnostics.tsx  Donations.tsx  Downloads.tsx  ExploreCategories.tsx  ExtensionsPage.tsx  FlowNeuroPersona.tsx  History.tsx  Home.tsx  ImportData.tsx  LibraryPage.tsx  Likes.tsx  Onboarding.tsx  PlaylistDetailsPage.tsx  Playlists.tsx  SavedShorts.tsx  Search.tsx  Settings.tsx  SponsorBlock.tsx  Subscriptions.tsx  Sync.tsx  Watch.tsx
src/store/: useAlbumLibraryStore.ts  useAppSettingsStore.ts  useCollectionDownloadStore.ts  useDownloadCollectionsLibraryStore.ts  useDownloadStore.ts  useDownloadsLibraryStore.ts  useFeedActionsStore.ts  useHistoryStore.ts  useLikesStore.ts  useLiveStore.ts  useMusicActionsStore.ts  useMusicPlayerStore.ts  useNotificationStore.ts  usePageTitleStore.ts  usePlayerStore.test.ts  usePlayerStore.ts  usePlaylistModalStore.ts  useSettingsStore.ts  useSubscriptionStore.ts  useSyncStore.ts  useUiStore.ts  useUpdaterStore.ts
src/types/: db.ts  music.ts  shorts.ts  video.ts
(+185 files in other folders)
