[package]
name = "flow"
version = "0.1.0"
description = "Privacy-first YouTube and YouTube Music desktop companion to Flow for Android, powered by the native local FlowNeuro recommendation engine"
authors = ["A-EDev"]
edition = "2024"
default-run = "flow"
license = "GPL-3.0-only"
repository = "https://github.com/A-EDev/flow-desktop"

[lib]
name = "flow_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"

# Core Async & Serialization
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

# Database & Data Types
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Error Handling & Observability
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP Client
reqwest = { version = "0.13.3", features = ["stream", "json", "brotli", "rustls"] }

# SABR streaming protocol (self-contained protobuf/UMP codec, no external toolchain)
base64 = "0.22"

# NLP Pipeline
rust-stemmers = "1.2"
stop-words = "0.10"
whatlang = "0.18"

[profile.release]
# Keep production binaries compact without sacrificing the normal release optimizer.
panic = "abort"
codegen-units = 1
lto = true
strip = "symbols"
