[package]
name = "flow"
version = "0.1.0"
description = "Privacy-first YouTube and YouTube Music desktop companion to Flow for Android, powered by the native local FlowNeuro recommendation engine"
authors = ["A-EDev"]
edition = "2024"
default-run = "flow"
license = "GPL-3.0-only"
repository = "https://github.com/A-EDev/flow-desktop"

[lib]
name = "flow_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"

# Core Async & Serialization
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

# Database & Data Types
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Error Handling & Observability
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP Client
reqwest = { version = "0.13.3", features = ["stream", "json", "brotli", "rustls"] }
mp4 = "0.14"
webm-iterable = "0.6.2"

# SABR streaming protocol (self-contained protobuf/UMP codec, no external toolchain)
base64 = "0.22"

# NLP Pipeline
rust-stemmers = "1.2"
stop-words = "0.10"
whatlang = "0.18"

# Local Sync (P2P) — payload cryptography (FLOW-SYNC/1).
# AES-256-GCM payload encryption with HKDF-derived directional keys and an HMAC-SHA256 SAS.
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
# Local Sync (P2P) — transport: plaintext WebSocket (payload is AES-GCM encrypted), gzip
# compression (parity with Android java.util.zip), and LAN IP discovery for the QR.
tokio-tungstenite = "0.24"
flate2 = "1"
local-ip-address = "0.6"

[profile.release]
# Keep production binaries compact without sacrificing the normal release optimizer.
panic = "abort"
codegen-units = 1
lto = true
strip = "symbols"
