[package]
name = "flow"
version = "0.1.0-beta"
description = "Privacy-first YouTube and YouTube Music desktop companion to Flow for Android, powered by the native local FlowNeuro recommendation engine"
authors = ["A-EDev"]
edition = "2024"
default-run = "flow"
license = "GPL-3.0-only"
repository = "https://github.com/A-EDev/flow-desktop"

[lib]
name = "flow_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
# Deep linking: the flow:// scheme the browser extension hands off to.
tauri-plugin-deep-link = "2"
# In-app updates: signature-verified GitHub-releases updater + relaunch after install.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Core Async & Serialization
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

# Database & Data Types
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Error Handling & Observability
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Persist logs to a rolling file in the app data dir so failures stay diagnosable
# after the fact (the packaged app has no attached terminal to read stdout from).
tracing-appender = "0.2"

# HTTP Client
reqwest = { version = "0.13.3", features = ["stream", "json", "brotli", "rustls"] }
mp4 = "0.14"
webm-iterable = "0.6.2"

# SABR streaming protocol (self-contained protobuf/UMP codec, no external toolchain)
base64 = "0.22"

# NLP Pipeline
rust-stemmers = "1.2"
stop-words = "0.10"
whatlang = "0.18"

# Local Sync (P2P) — payload cryptography (FLOW-SYNC/1).
# AES-256-GCM payload encryption with HKDF-derived directional keys and an HMAC-SHA256 SAS.
aes-gcm = "0.11"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand = "0.9"
zeroize = { version = "1", features = ["derive"] }
# Local Sync (P2P) — transport: plaintext WebSocket (payload is AES-GCM encrypted), gzip
# compression (parity with Android java.util.zip), and LAN IP discovery for the QR.
tokio-tungstenite = "0.29"
flate2 = "1"
local-ip-address = "0.6"

# Native Windows toast notifications: build the toast XML directly so we can attach
# the app logo + a video thumbnail (hero image) and register a proper AppUserModelID,
# so the system attributes notifications to "Flow" instead of PowerShell.
[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.8"
windows-registry = "0.6"
windows = { version = "0.62", features = ["Win32_UI_Shell"] }

# Single-instance: forward a second `flow://` launch to the running window
# instead of spawning a duplicate. The "deep-link" feature makes it hand the
# argv URL to the deep-link plugin's on_open_url automatically.
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-window-state = "2"

[profile.release]
# Keep production binaries compact without sacrificing the normal release optimizer.
panic = "abort"
codegen-units = 1
lto = true
strip = "symbols"
